fix: history api 수정
- 8주차 과제_history api 수정 마무리하기

#41